Working bounding and customized fitting

--- a/small_n_stats_WPF/small_n_stats_WPF/app.config
+++ b/small_n_stats_WPF/small_n_stats_WPF/app.config
@@ -8,14 +8,13 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup><userSettings>
         <small_n_stats_WPF.Properties.Settings>
             <setting name="MainHeight" serializeAs="String">
-                <value>400</value>
+                <value>600</value>
             </setting>
             <setting name="MainWidth" serializeAs="String">
-                <value>400</value>
+                <value>600</value>
             </setting>
             <setting name="RecentFiles" serializeAs="String">
-                <value>
-                </value>
+                <value />
             </setting>
         </small_n_stats_WPF.Properties.Settings>
     </userSettings>
