--- a/small_n_stats_WPF/small_n_stats_WPF/Properties/Settings.settings
+++ b/small_n_stats_WPF/small_n_stats_WPF/Properties/Settings.settings
@@ -3,14 +3,13 @@
   <Profiles />
   <Settings>
     <Setting Name="MainHeight" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">400</Value>
+      <Value Profile="(Default)">600</Value>
     </Setting>
     <Setting Name="MainWidth" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">400</Value>
+      <Value Profile="(Default)">600</Value>
     </Setting>
     <Setting Name="RecentFiles" Type="System.String" Scope="User">
-      <Value Profile="(Default)">
-                </Value>
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
