Refactor, using beezdemand natively

--- a/small_n_stats_WPF/small_n_stats_WPF/app.config
+++ b/small_n_stats_WPF/small_n_stats_WPF/app.config
@@ -16,6 +16,9 @@
             <setting name="RecentFiles" serializeAs="String">
                 <value />
             </setting>
+            <setting name="LastDirectory" serializeAs="String">
+                <value />
+            </setting>
         </small_n_stats_WPF.Properties.Settings>
     </userSettings>
   <runtime>
