--- a/small_n_stats_WPF/small_n_stats_WPF/Properties/Settings.settings
+++ b/small_n_stats_WPF/small_n_stats_WPF/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="RecentFiles" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="LastDirectory" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
